<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="connect.me.activities.CoverActivity"
    android:background="@drawable/background"
    >

    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:text="Login"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btRegister"
        app:layout_constraintRight_toRightOf="@+id/btRegister"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="27dp"
        app:layout_constraintLeft_toLeftOf="@+id/btRegister" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:text="Register"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintVertical_bias="0.533" />
</android.support.constraint.ConstraintLayout>
