<resources>
    <string name="app_name">Connect-me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_message">Message</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

</resources>
